# ChangeLog for sys-kernel/git-sources
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.1134 2011/04/23 19:00:42 mpagano Exp $

*git-sources-2.6.39_rc4-r5 (23 Apr 2011)

  23 Apr 2011; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.39_rc4-r5.ebuild:
  Version bump

*git-sources-2.6.39_rc4-r4 (22 Apr 2011)

  22 Apr 2011; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.39_rc4-r4.ebuild:
  Version bump

*git-sources-2.6.39_rc4-r3 (22 Apr 2011)

  22 Apr 2011; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.39_rc4-r3.ebuild:
  Version bump

*git-sources-2.6.39_rc4-r2 (20 Apr 2011)

  20 Apr 2011; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.39_rc4-r2.ebuild:
  Version bump

*git-sources-2.6.39_rc4-r1 (20 Apr 2011)

  20 Apr 2011; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.39_rc4-r1.ebuild:
  Version bump

*git-sources-2.6.39_rc4 (19 Apr 2011)

  19 Apr 2011; Michael Pagano <mpagano@gentoo.org>
  -git-sources-2.6.39_rc1.ebuild, -git-sources-2.6.39_rc1-r1.ebuild,
  -git-sources-2.6.39_rc1-r2.ebuild, -git-sources-2.6.39_rc1-r3.ebuild,
  -git-sources-2.6.39_rc1-r4.ebuild, -git-sources-2.6.39_rc1-r5.ebuild,
  -git-sources-2.6.39_rc2.ebuild, -git-sources-2.6.39_rc2-r1.ebuild,
  -git-sources-2.6.39_rc2-r2.ebuild, -git-sources-2.6.39_rc2-r3.ebuild,
  -git-sources-2.6.39_rc2-r4.ebuild, +git-sources-2.6.39_rc4.ebuild:
  Version bump and old version cleanup

*git-sources-2.6.39_rc3-r8 (18 Apr 2011)

  18 Apr 2011; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.39_rc3-r8.ebuild:
  Version bump

*git-sources-2.6.39_rc3-r7 (17 Apr 2011)

  17 Apr 2011; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.39_rc3-r7.ebuild:
  Version bump

*git-sources-2.6.39_rc3-r6 (16 Apr 2011)
*git-sources-2.6.39_rc3-r5 (16 Apr 2011)
*git-sources-2.6.39_rc3-r4 (16 Apr 2011)

  16 Apr 2011; Michael Pagano <mpagano@gentoo.org>