@@ -1,6 +1,16 @@
 # ChangeLog for sys-kernel/git-sources
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.1134 2011/04/23 19:00:42 mpagano Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.1135 2011/04/24 17:32:19 mpagano Exp $
+
+*git-sources-2.6.39_rc4-r6 (24 Apr 2011)
+
+  24 Apr 2011; Michael Pagano <mpagano@gentoo.org>
+  -git-sources-2.6.39_rc3.ebuild, -git-sources-2.6.39_rc3-r1.ebuild,
+  -git-sources-2.6.39_rc3-r2.ebuild, -git-sources-2.6.39_rc3-r3.ebuild,
+  -git-sources-2.6.39_rc3-r4.ebuild, -git-sources-2.6.39_rc3-r5.ebuild,
+  -git-sources-2.6.39_rc3-r6.ebuild, -git-sources-2.6.39_rc3-r7.ebuild,
+  -git-sources-2.6.39_rc3-r8.ebuild, +git-sources-2.6.39_rc4-r6.ebuild:
+  Version bump and old version cleanup
 
 *git-sources-2.6.39_rc4-r5 (23 Apr 2011)
 
